--- a/datalake/docker-compose.yaml
+++ b/datalake/docker-compose.yaml
@@ -91,58 +91,6 @@ services:
     depends_on:
       - trino-coordinator
 
-  spark-master:
-    image: apache/spark:3.5.0
-    container_name: spark-master
-    command: bash -c "/opt/spark/sbin/start-master.sh && tail -f /dev/null"
-    environment:
-      - SPARK_MODE=master
-      - SPARK_MASTER_HOST=0.0.0.0
-      - SPARK_MASTER_PORT=7077
-      - SPARK_MASTER_WEBUI_PORT=8080
-      # creds for the AWS SDK inside the driver (if you run spark-submit here)
-      - AWS_ACCESS_KEY_ID=admin
-      - AWS_SECRET_ACCESS_KEY=password
-      - AWS_REGION=us-east-1
-      - AWS_EC2_METADATA_DISABLED=true
-    volumes:
-      - ./spark/spark-defaults.conf:/opt/spark/conf/spark-defaults.conf:ro
-
-    ports:
-      - "8090:8080"
-      - "7077:7077"
-    networks: [mnet]
-
-  spark-worker-1:
-    image: apache/spark:3.5.0
-    container_name: spark-worker-1
-    command: bash -c "/opt/spark/sbin/start-worker.sh spark://spark-master:7077 && tail -f /dev/null"
-    environment:
-      - SPARK_MODE=worker
-      - AWS_ACCESS_KEY_ID=admin
-      - AWS_SECRET_ACCESS_KEY=password
-      - AWS_REGION=us-east-1
-      - AWS_EC2_METADATA_DISABLED=true
-    volumes:
-      - ./spark/spark-defaults.conf:/opt/spark/conf/spark-defaults.conf:ro
-    networks: [mnet]
-    depends_on: [spark-master]
-
-  spark-worker-2:
-    image: apache/spark:3.5.0
-    container_name: spark-worker-2
-    command: bash -c "/opt/spark/sbin/start-worker.sh spark://spark-master:7077 && tail -f /dev/null"
-    environment:
-      - SPARK_MODE=worker
-      - AWS_ACCESS_KEY_ID=admin
-      - AWS_SECRET_ACCESS_KEY=password
-      - AWS_REGION=us-east-1
-      - AWS_EC2_METADATA_DISABLED=true
-    volumes:
-      - ./spark/spark-defaults.conf:/opt/spark/conf/spark-defaults.conf:ro
-    networks: [mnet]
-    depends_on: [spark-master]
-
   jupyter:
     image: jupyter/pyspark-notebook:latest
     ports: ["8888:8888"]
@@ -162,10 +110,79 @@ services:
     volumes:
       - ./spark/spark-defaults1.conf:/usr/local/spark/conf/spark-defaults.conf:ro
 
+  ########
+
+  namenode:
+    image: apache/hadoop:3.3.6
+    container_name: namenode
+    hostname: namenode
+    command: ["hdfs", "namenode"]
+    ports:
+      - "9870:9870"   # HDFS UI
+      - "8020:8020"   # HDFS RPC
+    volumes:
+      - namenode:/tmp/hadoop-root/dfs/name
+      - ./hadoop-conf:/opt/hadoop/etc/hadoop
+    networks: [mnet]
+
+  datanode:
+    image: apache/hadoop:3.3.6
+    container_name: datanode
+    hostname: datanode
+    command: ["hdfs", "datanode"]
+    volumes:
+      - datanode:/tmp/hadoop-root/dfs/data
+      - ./hadoop-conf:/opt/hadoop/etc/hadoop
+    depends_on: [namenode]
+    networks: [mnet]
+
+  resourcemanager:
+    image: apache/hadoop:3.3.6
+    container_name: resourcemanager
+    hostname: resourcemanager
+    command: ["yarn", "resourcemanager"]
+    ports:
+      - "8088:8088"   # YARN UI
+    volumes:
+      - ./hadoop-conf:/opt/hadoop/etc/hadoop
+    depends_on: [namenode, datanode]
+    networks: [mnet]
+
+  nodemanager-1:
+    image: apache/hadoop:3.3.6
+    container_name: nodemanager-1
+    hostname: nodemanager-1
+    command: ["yarn", "nodemanager"]
+    ports:
+      - "8042:8042"   # NM UI (опционально)
+    volumes:
+      - ./hadoop-conf:/opt/hadoop/etc/hadoop
+    depends_on: [resourcemanager]
+    networks: [mnet]
+
+  # контейнер, из которого ты делаешь spark-submit / spark-shell
+  spark-client:
+    image: apache/spark:3.5.0
+    container_name: spark-client
+    command: ["bash", "-lc", "tail -f /dev/null"]
+    environment:
+      - HADOOP_CONF_DIR=/opt/hadoop/etc/hadoop
+      - YARN_CONF_DIR=/opt/hadoop/etc/hadoop
+      # AWS creds для driver в client mode
+      - AWS_ACCESS_KEY_ID=admin
+      - AWS_SECRET_ACCESS_KEY=password
+      - AWS_REGION=us-east-1
+      - AWS_EC2_METADATA_DISABLED=true
+    volumes:
+      - ./hadoop-conf:/opt/hadoop/etc/hadoop:ro
+      - ./spark/spark-defaults.conf:/opt/spark/conf/spark-defaults.conf:ro
+      - ./apps:/apps
+    depends_on: [resourcemanager, nodemanager-1]
+    networks: [mnet]
+
 volumes:
-  spark_ivy:
-  spark-data:
-  spark-apps:
+  namenode:
+  datanode:
 
 networks:
   mnet:
