--- a/datalake/spark/spark-defaults.conf
+++ b/datalake/spark/spark-defaults.conf
@@ -20,3 +20,27 @@ spark.sql.catalog.nessie.io-impl org.apache.iceberg.aws.s3.S3FileIO
 spark.sql.catalog.nessie.s3.endpoint http://storage:9000
 spark.sql.catalog.nessie.s3.path-style-access true
 spark.sql.catalog.nessie.s3.region us-east-1
+
+
+# === YARN ===
+spark.master yarn
+# для Jupyter оставляй client, для batch ставь cluster при spark-submit
+spark.submit.deployMode client
+
+# staging в HDFS (создай /tmp/spark-staging и дай права)
+spark.yarn.stagingDir hdfs:///tmp/spark-staging
+
+# критично для докера: иначе YARN часто "убивает" контейнер по памяти
+spark.executor.memoryOverhead 512m
+spark.driver.memoryOverhead 512m
+
+# Прокидываем AWS creds в executors и в YARN AppMaster/driver (чтобы MinIO работал везде)
+spark.executorEnv.AWS_ACCESS_KEY_ID admin
+spark.executorEnv.AWS_SECRET_ACCESS_KEY password
+spark.executorEnv.AWS_REGION us-east-1
+spark.executorEnv.AWS_EC2_METADATA_DISABLED true
+
+spark.yarn.appMasterEnv.AWS_ACCESS_KEY_ID admin
+spark.yarn.appMasterEnv.AWS_SECRET_ACCESS_KEY password
+spark.yarn.appMasterEnv.AWS_REGION us-east-1
+spark.yarn.appMasterEnv.AWS_EC2_METADATA_DISABLED true
